idf_component_register(
    SRCS
        "main.c"
        "schedule_storage.c"
        "schedule_monitor.c"
        "schedule_event.c"
        "time_sync.c"
        "wifi_manager.c"
    PRIV_REQUIRES
        nvs_flash
        esp_wifi
        esp_event
        esp_netif
        lwip
    INCLUDE_DIRS
        "."
)
